--- a/src/styles/community/detail.css
+++ b/src/styles/community/detail.css
@@ -1,21 +1,27 @@
 .detail-bar {
     display: flex;
     height: 50px;
-    margin: 3% 5% 2% 110px;
+    margin: 0% 5% 2% 65%;
     border-radius: 15px;
     background-color: #E7F998;
     align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+#detail-omg{
+    padding-top: 5.5%;
 }
 
 .detail-title-bar {
     display: flex;
     height: 70px;
-    margin: 0% 6% 2% 119px;
-    border-radius: 2px;
+    margin: 0% 5% 2% 110px;
+    /* border-radius: 3px; */
     padding-left: 30px;
     background-color: none;
     text-align: left;
-    border-bottom: 5px solid #7DCCAC;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 8px;
+    border-radius: 15px;
 }
 
 .detail-title-bar p {
@@ -33,6 +39,7 @@
 .button-right {
     margin-left: auto;
     margin-right: 7%;
+    position: relative;
 }
 
 .detail-textarea p {
@@ -52,12 +59,12 @@
 
 .detail-textarea {
     display: grid;
-    border: 5px solid #B9ED90;
     border-radius: 18px;
     margin: 0% 5% 10px 110px;
     height: 480px;
     box-sizing: border-box;
     background-clip: padding-box;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 8px;
 }
 
 .detail-textarea ::-webkit-scrollbar {
@@ -77,6 +84,7 @@
     width: 90px;
     height: 28px;
     font-weight: bold;
+    box-shadow: rgba(0, 0, 0, 0.06) 0px 1px 2px 0px inset;
 }
 
 #detail-submit:hover {
@@ -92,6 +100,7 @@
     background-color: none;
     align-items: center;
     background-color: #B9ED90;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 01px 2.7px;
 }
 
 .detail-comment-bar p {
@@ -102,19 +111,19 @@
 
 .detail-comment-input .input-text {
     display: flex;
-    height: 32px;
+    width: 100%;
+    align-items: center;
+}
+
+.detail-comment-input .input-text input {
+    justify-content: left;
+    height: 37px;
     width: 100%;
     margin: 0% 2% 7px 119px;
     border-radius: 15px;
     padding-left: 30px;
-    align-items: center;
-    border: 5px solid #B9ED90;
-}
-
-.detail-comment-input .input-text input {
-    width: 100%;
-    justify-content: left;
-
+    border: 0.1px solid #b8ed9060;
+    box-shadow: inset #B9ED90 0px 17px 45px -20px;
 }
 
 .detail-form {
@@ -133,9 +142,10 @@
     border: none;
     border-radius: 8px;
     width: 90px;
-    height: 40px;
+    height: 33px;
     font-weight: bold;
     margin-bottom: 7px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 #detail-comment-submit:hover {
@@ -153,15 +163,11 @@
     align-items: center;
 }
 
-#secret {
+#detail-secret {
     position: absolute;
     z-index: 2px;
     font-size: x-large;
     margin-left: 34px;
     margin-top: 2px;
-    justify-content: center;
 }
 
-.button-right span {
-    position: relative;
-}
