--- a/src/styles/community/edit.css
+++ b/src/styles/community/edit.css
@@ -1,7 +1,7 @@
 .edit-bar{
     display:flex;
     height: 50px;
-    margin:3% 5% 2% 110px ;
+    margin:3% 5% 2% 130px ;
     border-radius: 15px;
     background-color: none;
     align-items:center;
@@ -10,16 +10,20 @@
 .edit-title-bar{
     display:flex;
     height: 70px;
-    margin:0% 6% 2% 119px ;
+    margin:0% 5% 2% 110px ;
     border-radius: 2px;
     padding-left: 30px;
     background-color: none;
     text-align: left;
-    border-bottom: 5px solid #7DCCAC;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 8px;
+    border-radius: 15px;
 }
 
 .edit-title-bar p{
     width: 90%;
+    font-weight: bolder;
+    margin-top: 30px;
+    font-size: large;
 }
 
 .edit-title-bar input{
@@ -63,11 +67,15 @@
 
 .edit-textarea {
     display: grid;
-    border: 5px solid #B9ED90;
     border-radius: 18px;
     margin:0% 5% 5% 110px;
     padding-right: 10px;
     height: 600px;
     box-sizing: border-box;
     background-clip: padding-box; 
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 8px;
+}
+
+#edit-omg {
+    padding-top: 0.2px;
 }
