--- a/src/styles/community/post.css
+++ b/src/styles/community/post.css
@@ -9,25 +9,30 @@
 .post-card {
     width: 500px;
     max-height: 600px;
-    border: 7px solid #B9ED90;
+    border: 0.3px solid rgba(60, 64, 67, 0.05);
     border-radius: 40px;
     padding: 20px;
     margin: 25px;
     overflow: hidden;
     box-sizing: border-box;
-    background-clip: padding-box;    
+    background-clip: padding-box;
+    box-shadow: inset #B9ED90 0px 17px 45px -20px;
 }
 
-.post-card:hover{
+.post-card:hover {
     cursor: pointer;
+    box-shadow:#7dccac 0px 5px 50px -30px,
+    #7dccac 0px 5px 60px -30px,
+    #7dccac 0px -2px 6px 0px inset;
+    border : solid 0px;
 }
 
 .post-card p {
     overflow-wrap: break-word;
-    word-break: keep-all; 
+    word-break: keep-all;
 }
 
-.guide-card{
+.guide-card {
     width: 500px;
     max-height: 230px;
     background-color: #E7F998;
@@ -35,9 +40,11 @@
     padding: 30px;
     margin: 25px;
     box-sizing: border-box;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
-#new-post-create{
+#new-post-create {
     float: right;
     margin-right: 15px;
     width: 50px;
@@ -46,16 +53,19 @@
     border: none;
 }
 
-#new-post-create a{
+#new-post-create a {
     text-decoration: none;
     color: black;
+    z-index: 20px;
 }
-.post-page a{
+
+.post-page a {
     text-decoration: none;
     color: black;
     margin: -20px;
 }
-#post-create-icon{
+
+#post-create-icon {
     width: 45px;
     height: 45px;
 }
